--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -1,17 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_search"
-        android:orderInCategory="101"
+        android:id="@+id/search_view"
         android:icon="@drawable/ic_menu_search"
+        android:orderInCategory="101"
         android:title="@string/action_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 
 </menu>
